automad/src/client/admin/styles/components/editor/blocks/layout-section.less
/*
 *                    ....
 *                  .:   '':.
 *                  ::::     ':..
 *                  ::.         ''..
 *       .:'.. ..':.:::'    . :.   '':.
 *      :.   ''     ''     '. ::::.. ..:
 *      ::::.        ..':.. .''':::::  .
 *      :::::::..    '..::::  :. ::::  :
 *      ::'':::::::.    ':::.'':.::::  :
 *      :..   ''::::::....':     ''::  :
 *      :::::.    ':::::   :     .. '' .
 *   .''::::::::... ':::.''   ..''  :.''''.
 *   :..:::'':::::  :::::...:''        :..:
 *   ::::::. '::::  ::::::::  ..::        .
 *   ::::::::.::::  ::::::::  :'':.::   .''
 *   ::: '::::::::.' '':::::  :.' '':  :
 *   :::   :::::::::..' ::::  ::...'   .
 *   :::  .::::::::::   ::::  ::::  .:'
 *    '::'  '':::::::   ::::  : ::  :
 *              '::::   ::::  :''  .:
 *               ::::   ::::    ..''
 *               :::: ..:::: .:''
 *                 ''''  '''''
 * 
 *
 * AUTOMAD
 *
 * Copyright (c) 2023-2025 by Marc Anton Dahmen
 * https://marcdahmen.de
 *
 * Licensed under the MIT license.
 */

.am-c-ed-bl-layout-section {
	position: relative;
	display: flex;
	flex-direction: column;
	height: 100%;
	outline: 1px dashed hsl(var(--am-clr-border));
	border-radius: @am-form-radius;

	// Compensate height difference when an id or class tune is used.
	.ce-block__content:has(> span > .am-e-badge):has(> div > &) {
		padding-bottom: 2.5rem;
	}

	&__toolbar {
		interpolate-size: allow-keywords;
		position: absolute;
		display: none;
		z-index: 30;
		top: -3.5rem;
		height: auto;
		font-size: 0.85rem;
		opacity: 0;
		transition: opacity 0.2s;
		transition:
			display 0.2s allow-discrete,
			overlay 0.2s allow-discrete,
			opacity 0.2s;
		pointer-events: none;
		color: hsl(var(--am-clr-text));
		background-color: hsl(var(--am-clr-background));
		border-radius: @am-bl-editor-toolbar-radius;
		border: @am-modal-border;
		box-shadow: @am-shadow;

		&-section {
			display: flex;
			gap: @am-bl-editor-space;
			padding: @am-bl-editor-space;

			& + & {
				border-left: @am-border;
			}
		}

		&.am-active {
			display: flex;
			opacity: 1;
			pointer-events: all;
		}

		& .am-f-group {
			[type='number'] {
				width: 2rem;
			}
		}
	}

	&__radios {
		display: flex;
		align-items: stretch;
		gap: 2px;
	}

	&__radio {
		display: flex;
		justify-content: center;
		align-items: center;
		padding: 0 8px;
		cursor: pointer;
		color: hsl(var(--am-clr-text-muted));
		border-radius: 3px;
		transition:
			color 0.2s,
			background-color 0.2s;

		& svg {
			height: 18px !important;
			width: 18px !important;
		}

		& input {
			display: none;
		}

		&:hover {
			background-color: hsl(var(--am-clr-background-highlight));
		}

		&:active {
			background-color: hsl(var(--am-clr-background-faded));
		}

		&--active {
			color: hsl(var(--am-clr-text));
			background-color: hsl(var(--am-clr-background-highlight));
		}
	}

	&__label {
		position: relative;
		display: flex;
		align-items: center;
		gap: 0.4em;
		height: 1.75rem;
		padding: 0 0.85em;
		margin-top: -1px;
		left: -1px;
		font-size: @am-small-font-size;
		font-weight: 560;
		color: hsl(var(--am-clr-text));
		background: hsl(var(--am-clr-border));
		border-top-left-radius: @am-form-radius;
		cursor: pointer;
	}

	&__editor {
		display: block;
		height: 100%;

		& > .codex-editor > .codex-editor__redactor {
			--space: var(--gap, 1px);

			display: flex;
			flex-wrap: wrap;
			gap: var(--space);
			height: 100%;
		}

		& .ce-block {
			position: relative;
			flex-basis: 100%;
			flex-grow: 0;
			min-width: ~'min(100%, var(--minBlockWidth, 8rem))';

			// Make gaps work when flex elements that have a particular fractional width
			// are followed by elements with a default width or vice versa.
			&:not([am-width]) > * {
				margin-top: ~'calc(var(--space) * -1)';
				margin-bottom: ~'calc(var(--space) * -1)';
			}

			&:not([am-width]):first-child > *,
			&:not([am-width]) + :not([am-width]) > * {
				margin-top: 0;
			}

			&:not([am-width]):last-child > * {
				margin-bottom: 0;
			}
		}

		& [am-width] {
			& > * {
				max-width: none !important;
			}
		}

		& [am-width='1/4'] {
			flex-basis: calc((100% - (3 * var(--space))) / 4);
		}

		& [am-width='1/3'] {
			flex-basis: calc((100% - (2 * var(--space))) / 3);
		}

		& [am-width='1/2'] {
			flex-basis: calc((100% - var(--space)) / 2);
		}

		& [am-width='3/4'] {
			flex-basis: calc((300% - var(--space)) / 4);
		}

		& [am-width='2/3'] {
			flex-basis: calc((200% - var(--space)) / 3);
		}

		& [am-width='1/1'] {
			flex-basis: 100%;
		}

		&.am-style {
			&--justify-start > .codex-editor > .codex-editor__redactor {
				justify-content: flex-start;
			}

			&--justify-center > .codex-editor > .codex-editor__redactor {
				justify-content: center;
			}

			&--justify-end > .codex-editor > .codex-editor__redactor {
				justify-content: flex-end;
			}

			&--justify-space-between > .codex-editor > .codex-editor__redactor {
				justify-content: space-between;
			}

			&--justify-space-evenly > .codex-editor > .codex-editor__redactor {
				justify-content: space-evenly;
			}

			&--justify-fill-row > .codex-editor > .codex-editor__redactor > * {
				flex-grow: 1;
			}

			&--align-normal > .codex-editor > .codex-editor__redactor {
				align-content: normal;
				align-items: normal;
			}

			&--align-stretch > .codex-editor > .codex-editor__redactor {
				align-content: stretch;
				align-items: stretch;
			}

			&--align-center > .codex-editor > .codex-editor__redactor {
				align-content: center;
				align-items: center;
			}

			&--align-start > .codex-editor > .codex-editor__redactor {
				align-content: start;
				align-items: start;
			}

			&--align-end > .codex-editor > .codex-editor__redactor {
				align-content: end;
				align-items: end;
			}

			&--shadow > .codex-editor {
				box-shadow: @am-shadow;
			}

			&--overflow-hidden > .codex-editor > .codex-editor__redactor {
				overflow: clip;
			}

			&--card > .codex-editor > .codex-editor__redactor {
				padding: @am-bl-editor-card-padding;

				& > .am-style--stretched {
					display: flex;
					flex-basis: auto;
					max-width: none !important;
					width: ~'calc(100% + 200rem)' !important;
					margin-inline: -@am-bl-editor-card-padding !important;

					&:first-child {
						margin-top: ~'calc((@{am-bl-editor-card-padding} + @{am-bl-editor-block-padding-y}) * -1)' !important;
					}

					& > * > * > [contenteditable] {
						padding-inline: @am-bl-editor-card-padding;
					}
				}
			}

			&--match-height {
				flex-grow: 1;
				display: flex;

				& > .codex-editor {
					flex-grow: 1;
				}
			}
		}

		.ce-block & > .codex-editor {
			height: 100%;
			color: var(--color, inherit);
			padding-top: var(--paddingTop);
			padding-bottom: var(--paddingBottom);
			background-color: var(--backgroundColor, inherit);
			background-image: var(--backgroundImage);
			background-blend-mode: var(--backgroundBlendMode, normal);
			background-size: cover;
			background-position: center center;
			border: none;

			& > .codex-editor__redactor {
				border-radius: var(--borderRadius, 0);
				border: var(--borderWidth, 0) var(--borderStyle, none)
					var(--borderColor, currentColor);
			}
		}
	}
}

